tests/sema/fail/v3_fail_nonvoid_bare_return.ep
# COMPILE_FAIL: return expected i64, got void

fun main(): i64 {
    ret
}
